--- a/mos.yml
+++ b/mos.yml
@@ -26,4 +26,4 @@ config_schema:
 libs:
   - origin: https://github.com/mongoose-os-libs/bt-common
   - origin: https://github.com/mongoose-os-libs/rpc-common
-  - origin: https://github.com/QRPp/mgos-helpers
+  - {origin: https://github.com/QRPp/mgos-helpers, name: helpers}
